@@ -2135,7 +2135,12 @@ Takes an array reference of base C<b> digits in C<MSB -> LSB> order,
 and an optional unsigned integer base C<b> (default 10).
 Returns the equivalent base-10 integer.
 
+Alternately, takes a string of digits in base C<b> instead of the
+the array reference, with both lower and upper case denoting digits
+11 through 36.
+
 Each input digit must be an unsigned int.
+The base must be at least 2.
 
 =head2 seed_csprng
 
